--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
+  
+    
+<div class="cursor small"></div>
+<div class="cursor big"><div>
+    
 <head>
   <title>Mouse as Black Circle</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+  
   <div class="circle" id="mouseCircle"></div>
   <script src="main.js"></script>
 </body>
+
 </html>
