--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-  
-    
-<div class="cursor small"></div>
-<div class="cursor big"><div>
-    
 <head>
-  <title>Mouse as Black Circle</title>
+
+
+  
+  <!-- Link to an external CSS file -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
+  <!-- Two custom cursor elements -->
+  <div class="cursor small"></div>
   
-  <div class="circle" id="mouseCircle"></div>
+  <img src="https://media4.giphy.com/media/T18X58VjRRwwFSg23e/giphy.gif?cid=ecf05e472xhwm9lhslxh5rj989l2rlm95bur2ryf9aa6nko2&ep=v1_gifs_gifId&rid=giphy.gif&ct=g"
+  alt="alternatetext"
+  width="300"
+  title="test testing" />
+  
+
+  <!-- Link to an external JavaScript file -->
   <script src="main.js"></script>
 </body>
-
 </html>
