--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
-  
   <!-- Link to an external CSS file -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -11,11 +8,16 @@
   <!-- Two custom cursor elements -->
   <div class="cursor small"></div>
   
+  <img src="./0001_3.gif"
+  alt="alternatetext"
+  width="300"
+  title="test testing" />
+
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo in, impedit quod dicta est facilis consectetur laborum eius vitae voluptate asperiores, vel ipsa laboriosam odit esse beatae nesciunt architecto deserunt.</p>
   <img src="https://media4.giphy.com/media/T18X58VjRRwwFSg23e/giphy.gif?cid=ecf05e472xhwm9lhslxh5rj989l2rlm95bur2ryf9aa6nko2&ep=v1_gifs_gifId&rid=giphy.gif&ct=g"
   alt="alternatetext"
   width="300"
   title="test testing" />
-  
 
   <!-- Link to an external JavaScript file -->
   <script src="main.js"></script>
