--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+  </style>
 <head>
   <!-- Link to an external CSS file -->
   <link rel="stylesheet" type="text/css" href="style.css">
