--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+    @import url('//fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
   </style>
 <head>
   <!-- Link to an external CSS file -->
