--- a/index.html
+++ b/index.html
@@ -1,28 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <style>
-    @import url('//fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
-  </style>
-<head>
-  <!-- Link to an external CSS file -->
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <!-- Two custom cursor elements -->
-  <div class="cursor small"></div>
   
-  <img src="./0001_3.gif"
-  alt="alternatetext"
-  width="300"
-  title="test testing" />
+  
+  <style>
+    @import url('//fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap');
+  </style>
+  
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+  <link rel="stylesheet" href="style.css">
+  
+  
+</head>
 
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo in, impedit quod dicta est facilis consectetur laborum eius vitae voluptate asperiores, vel ipsa laboriosam odit esse beatae nesciunt architecto deserunt.</p>
-  <img src="https://media4.giphy.com/media/T18X58VjRRwwFSg23e/giphy.gif?cid=ecf05e472xhwm9lhslxh5rj989l2rlm95bur2ryf9aa6nko2&ep=v1_gifs_gifId&rid=giphy.gif&ct=g"
-  alt="alternatetext"
-  width="300"
-  title="test testing" />
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- Two custom cursor elements -->
+  <main>
+    <div class="grid-container">
+      <div class="grid-item">
+        <img src="./IMG_0076.jpg" alt="Image 1" >
+        <div class="image-label">Image 1</div>
+      </div>
+      <div class="grid-item">
+        <img src="./Gizmo_orange.png" alt="Image 2">
+        <div class="image-label">ObsCura</div>
+      </div>
+      <div class="grid-item">
+        <img src="./0001_3.gif" alt="Image 3">
+        <div class="image-label">Image 1</div>
+      </div>
+      <div class="grid-item">
+        <img src="./0001_3.gif" alt="Image 3">
+        <div class="image-label">Image 1</div>
+      </div>
+      <div class="grid-item">
+        <img src="./0001_3.gif" alt="Image 3">
+        <div class="image-label">Image 1</div>
+      </div>
+      <!-- Add more grid items for a total of 9 images -->
+    </div>
 
+  </main>
+  <footer>
+    <p>&copy; 2023 My Website. All rights reserved.</p>
+  </footer>
+  <div class="cursor small"></div>
   <!-- Link to an external JavaScript file -->
   <script src="main.js"></script>
 </body>
+
+
 </html>
