--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   
   
-  <style>
-    @import url('//fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap');
-  </style>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap">
+  
   
 <head>
   <meta charset="UTF-8">
