--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <title>Ori Blich</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap">
+  <link rel="icon" type="image/png" href="./favicon.png">
+
 </head>
 
 <body>
@@ -14,9 +16,8 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <!-- Change the href value to the name of your projects page -->
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+        <!--<li><a href="projects.html">Projects</a></li> -->
       </ul>
     </nav>
   </header>
@@ -24,7 +25,7 @@
   <main>
     <section id="home">
       
-      <!-- This is the dynamic text that changes -->
+      
       <div id="dynamicText" class="typing"></div>
       <button class="round-button" onclick="changeText()"></button>
     </section>
@@ -38,6 +39,7 @@
 
   <script src="main.js"></script>
   <script src="text.js"></script>
+  
   
   
 </body>
