--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Ori Blich</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <link rel="icon" type="image/png" href="./favicon_1X1.png">
 </head>
 <body>
 <header>
@@ -26,7 +26,7 @@
 </div>
 <div id="text-container">
     <!-- Text content goes here -->
-    <p>Hi! I'm Ori Blich - a design engineer / creative technologist who specializes in exploring the intersection of human-machine interactions. 
+    <p>Hi! I'm Ori Blich - a design engineer / creative technologist who specializes in human-machine interactions. 
         Currently, I'm working on utilizing sustainable materials and creating VR educational tools.
     </p>
 </div>
