--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Ori Blich</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap">
-  <link rel="icon" type="image/png" href="./favicon.png">
+  <link rel="icon" type="image/png" href="./favicon_1X1.png">
 
 </head>
 
@@ -30,11 +30,11 @@
       <button class="round-button" onclick="changeText()"></button>
     </section>
   </main>
-
+<!--
   <footer>
     <p>&copy; 2024 My Website. All rights reserved.</p>
   </footer>
-
+-->
   <div class="cursor small"></div>
 
   <script src="main.js"></script>
