--- a/projects.html
+++ b/projects.html
@@ -29,44 +29,51 @@
   </header>
  
   <main>
-    <div class="grid-container">
-      <div class="grid-item image-container">
-        <img src="Cadmanship_pixel.png" alt="Image 1" >
-        <div class="image-label">Image 1</div>
-      </div>
-      <div class="grid-item image-container">
-        <img src="./Gizmo_orange_pixel.png" alt="Image 2">
-        <div class="image-label">ObsCura</div>
-      </div>
-      <div class="grid-item image-container">
-        <img src="./cake_mold_pixel.png" alt="Image 3">
-        <div class="image-label">Image 1</div>
-      </div>
-      <div class="grid-item image-container">
-        <img src="./squiB_pixel.jpg" alt="Image 3">
-        <div class="image-label">Image 1</div>
-      </div>
-      <div class="grid-item image-container">
-        <img src="IMG_0076_pixelate.jpg" alt="Image 3">
-        <div class="image-label">Image 1</div>
-      </div>
-      <div class="grid-item image-container">
-        <img src="Asset 11@300x_pixelate.jpg" alt="Image 3">
-        <div class="image-label">Image 1</div>
-      </div>
-      <!-- Add more grid items for a total of 9 images -->
-    </div>
-    
+    <table>
+      <tr>
+        <td data-imageUrl="./pipette.png" class="hoverable">Pipette</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./carbon cell.jpg" class="hoverable">Carbon Cell</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./Simulathe.gif" class="hoverable">Simulathe</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./Gizmo_orange.png" class="hoverable">Obscura</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./squib.jpg" class="hoverable">Squib</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./Marionettist.jpg" class="hoverable">Marionettist</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./Data Tree.gif" class="hoverable">Data Tree</td>
+      </tr>
+      <tr>
+        <td data-imageUrl="./stul.png" class="hoverable">STuL</td>
+      </tr>
+        <td data-imageUrl="./lungs.gif" class="hoverable">Organs Visualization</td>
+      </tr>
+    </table>
   </main>
   <footer>
     <p>&copy; 2024 My Website. All rights reserved.</p>
   </footer>
   <div class="cursor small"></div>
+  <div class="image-overlay"></div>
+
+
 
   <!--<div class="overlay"></div>-->
   <script src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script src="sketch.js" defer></script> <!-- Load the separate JavaScript file -->
+  <script src="CenterImage.js"></script>
+ 
 
   
 </body>
