--- a/projects.html
+++ b/projects.html
@@ -31,33 +31,36 @@
   <main>
     <table>
       <tr>
-        <td data-imageUrl="./pipette.png" class="hoverable">Pipette</td>
+        <td><img data-imageUrl="./dither_pipette.png" alt="Pipette" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./carbon cell.jpg" class="hoverable">Carbon Cell</td>
+        <td><img data-imageUrl="./dither_carbon cell.jpg" alt="Carbon Cell" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./Simulathe.gif" class="hoverable">Simulathe</td>
+        <td><img data-imageUrl="./dither_Simulathe.gif" alt="Simulathe" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./Gizmo_orange.png" class="hoverable">Obscura</td>
+        <td><img data-imageUrl="./dither_CADmanship.png" alt="CADmanship" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./squib.jpg" class="hoverable">Squib</td>
+        <td><img data-imageUrl="./dither_Gizmo_orange.png" alt="Obscura" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./Marionettist.jpg" class="hoverable">Marionettist</td>
+        <td><img data-imageUrl="./dither_squib.jpg" alt="Squib" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</td>
+        <td><img data-imageUrl="./dither_Marionettist.jpg" alt="Marionettist" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./Data Tree.gif" class="hoverable">Data Tree</td>
+        <td><img data-imageUrl="./dither_Programmable Cake Mold.png" alt="Programmable Cake Mold" class="hoverable"></a></td>
       </tr>
       <tr>
-        <td data-imageUrl="./stul.png" class="hoverable">STuL</td>
+        <td><img data-imageUrl="./dither_Data Tree.gif" alt="Data Tree" class="hoverable"></a></td>
       </tr>
-        <td data-imageUrl="./lungs.gif" class="hoverable">Organs Visualization</td>
+      <tr>
+        <td><img data-imageUrl="./dither_stul.png" alt="STuL" class="hoverable"></a></td>
+      </tr>
+        <td><img data-imageUrl="./dither_lungs.gif" alt="Organs Visualization" class="hoverable"></a></td>
       </tr>
     </table>
   </main>
