--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
   <main>
     <table>
       <tr>
-        <td><img data-imageUrl="./dither_pipette.png" alt="Pipette" class="hoverable"></a></td>
+        <td><a href="index.html"><img data-imageUrl="./dither_pipette.png" alt="Pipette" class="hoverable"></a></td>
       </tr>
       <tr>
         <td><img data-imageUrl="./dither_carbon cell.jpg" alt="Carbon Cell" class="hoverable"></a></td>
