--- a/projects.html
+++ b/projects.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
-  
-  
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap">
-  
-  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ori Blich</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png">
-
-  
-  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap">
 </head>
 
 <body>
@@ -31,56 +23,51 @@
   <main>
     <table>
       <tr>
-        <td><a href="index.html"><img data-imageUrl="./dither_pipette.png" alt="Pipette" class="hoverable"></a></td>
+        <td><a href="index.html" data-imageUrl="./dither_pipette.png" class="hoverable">Pipette</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_carbon cell.jpg" alt="Carbon Cell" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_carbon cell.jpg" class="hoverable">Carbon Cell</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_Simulathe.gif" alt="Simulathe" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_Simulathe.gif" class="hoverable">Simulathe</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_CADmanship.png" alt="CADmanship" class="hoverable"></a></td>
+        <td><a href="CADmanship.html" data-imageUrl="./dither_Cadmanship.png" class="hoverable">CADmanship</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_Gizmo_orange.png" alt="Obscura" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_Gizmo_orange.png" class="hoverable">Obscura</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_squib.jpg" alt="Squib" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_squib.jpg" class="hoverable">Squib</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_Marionettist.jpg" alt="Marionettist" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_Marionettist.jpg" class="hoverable">Marionettist</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_Programmable Cake Mold.png" alt="Programmable Cake Mold" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_Data Tree.gif" alt="Data Tree" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_Data Tree.gif" class="hoverable">Data Tree</a></td>
       </tr>
       <tr>
-        <td><img data-imageUrl="./dither_stul.png" alt="STuL" class="hoverable"></a></td>
+        <td><a href="#" data-imageUrl="./dither_stul.png" class="hoverable">STuL</a></td>
       </tr>
-        <td><img data-imageUrl="./dither_lungs.gif" alt="Organs Visualization" class="hoverable"></a></td>
+      <tr>
+        <td><a href="#" data-imageUrl="./dither_lungs.gif" class="hoverable">Organs Visualization</a></td>
       </tr>
     </table>
+    <button id="scrollToTopBtn" class="scroll-to-top"></button>
   </main>
+
   <footer>
     <p>&copy; 2024 My Website. All rights reserved.</p>
   </footer>
+
   <div class="cursor small"></div>
   <div class="image-overlay"></div>
-  
 
-
-
-  <!--<div class="overlay"></div>-->
   <script src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <script src="CenterImage.js"></script>
- 
-
-  
 </body>
-
-
 </html>
