--- a/CADmanship.html
+++ b/CADmanship.html
@@ -147,6 +147,7 @@
   <script src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <script src="CenterImage.js"></script>
+  <script src="loader.js"></script>
  
 
   
