--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,10 @@
         <td><a href="index.html" data-imageUrl="./dither_pipette.png" class="hoverable">Pipette</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_carbon cell.jpg" class="hoverable">Carbon Cell</a></td>
+        <td><a href="www.carboncell.co" data-imageUrl="./dither_carbon cell.jpg" target="_blank" rel="noopener noreferrer"  class="hoverable">Carbon Cell</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_Simulathe.gif" class="hoverable">Simulathe</a></td>
+        <td><a href="simulathe.html" data-imageUrl="./dither_Simulathe.gif" class="hoverable">Simulathe</a></td>
       </tr>
       <tr>
         <td><a href="CADmanship.html" data-imageUrl="./dither_Cadmanship.png" class="hoverable">CADmanship</a></td>
