--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         <td><a href="index.html" data-imageUrl="./dither_pipette.png" class="hoverable">Pipette</a></td>
       </tr>
       <tr>
-        <td><a href="www.carboncell.co" data-imageUrl="./dither_carbon cell.jpg" target="_blank" rel="noopener noreferrer"  class="hoverable">Carbon Cell</a></td>
+        <td><a href="https://www.carboncell.co" data-imageUrl="./dither_carbon cell.jpg" target="_blank" rel="noopener noreferrer"  class="hoverable">Carbon Cell</a></td>
       </tr>
       <tr>
         <td><a href="simulathe.html" data-imageUrl="./dither_Simulathe.gif" class="hoverable">Simulathe</a></td>
@@ -35,13 +35,13 @@
         <td><a href="CADmanship.html" data-imageUrl="./dither_Cadmanship.png" class="hoverable">CADmanship</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_Gizmo_orange.png" class="hoverable">Obscura</a></td>
+        <td><a href="obscura.html" data-imageUrl="./dither_Gizmo_orange.png" class="hoverable">Obscura</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_squib.jpg" class="hoverable">Squib</a></td>
+        <td><a href="squiB.html" data-imageUrl="./dither_squib.jpg" class="hoverable">Squib</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_Marionettist.jpg" class="hoverable">Marionettist</a></td>
+        <td><a href="Marionettist.html" data-imageUrl="./dither_Marionettist.jpg" class="hoverable">Marionettist</a></td>
       </tr>
       <tr>
         <td><a href="#" data-imageUrl="./dither_Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</a></td>
