--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="#">🚧Projects🚧</a></li>
       </ul>
     </nav>
   </header>
