--- a/CADmanship.html
+++ b/CADmanship.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">⚠️Projects⚠️</a></li>
+        <li><a href="projects.html">🚧Projects🚧</a></li>
       </ul>
     </nav>
   </header>
