--- a/CADmanship.html
+++ b/CADmanship.html
@@ -57,7 +57,7 @@
       </div>
 
       <div class="image-section">
-        <img src="./Cadmanship/prototype_A_small.gif" alt="Image 2">
+        <img src="./Cadmanship/prototype_A_small.gif" class="clickable-image">
     </div>
   </div>
 
@@ -73,7 +73,7 @@
     </div>
 
     <div class="image-section">
-      <img src="./Cadmanship/Durable_prototype.gif" alt="Image 2">
+      <img src="./Cadmanship/Durable_prototype.gif" >
   </div>
 </div>
   <div class="container">
