--- a/obscura.html
+++ b/obscura.html
@@ -61,7 +61,8 @@
         <p class="spaced-paragraph">H. Arduino. This controls the shades/vibration motors in response to received commands from the raspberry pi. </p>
     </div>
       <div class="image-section">
-        <img src="./obscura/blue print-01.png" alt="Image">
+        <img src="./obscura/blue print-01.png " class="clickable-image">
+        
     </div>
   </div>
 
@@ -71,17 +72,23 @@
     <p>Function A:</p>
         <p class="spaced-paragraph">If the perpetrator is located on the left-hand  or right-hand side of the frame, the vibrating motor will buzz on the left or right, alerting the wearer to the attempt to make eye contact.
         The wearer may now use this information as they wish, to either avoid or engage with eye contact.</p>
-        
-
-        <p>Function B:</p>
-        If the perpetrator is located on the middle of the frame — and the ‘hide’ function of the glasses is engaged (accessed via the switch, see page 3) — the wings descend, obscuring direct eye contact from being made. The wings will lift after a pre-determined period of time (4 s).
-If the ‘hide’ function is not engaged, then nothing will happen.</p>
         </div>
     <div class="image-section">
-        <img src="./obscura/Picture2.jpg" alt="Image 2">
-        <img src="./obscura/Picture3.jpg" alt="Image 2">
+        <img src="./obscura/Picture2.jpg" alt="Image 2" >
+        <p>function A</p>
     </div>
 </div>
+<div class="container">
+    <div class="text-section">
+          <p>Function B:</p>
+          If the perpetrator is located on the middle of the frame — and the ‘hide’ function of the glasses is engaged (accessed via the switch, see page 3) — the wings descend, obscuring direct eye contact from being made. The wings will lift after a pre-determined period of time (4 s).
+  If the ‘hide’ function is not engaged, then nothing will happen.</p>
+          </div>
+      <div class="image-section">
+          <img src="./obscura/Picture3.jpg" alt="Image 2">
+          <p>function B</p>
+      </div>
+  </div>
 
 <div class="container">
     <div class="text-section">
@@ -129,7 +136,7 @@ If the ‘hide’ function is not engaged, then nothing will happen.</p>
 
           </div>
       <div class="image-section">
-          <img src="./obscura/Architecture.png" alt="Image 2">
+          <img src="./obscura/Architecture.png" class="clickable-image">
           <img src="./obscura/IMG_9105.jpg" alt="Image 2">
       </div>
   </div>
