--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
         <td><a href="Marionettist.html" data-imageUrl="./dither_Marionettist.jpg" class="hoverable">Marionettist</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</a></td>
+        <td><a href="cake mold.html" data-imageUrl="./dither_Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</a></td>
       </tr>
       <tr>
         <td><a href="#" data-imageUrl="./dither_Data Tree.gif" class="hoverable">Data Tree</a></td>
