--- a/squiB.html
+++ b/squiB.html
@@ -50,7 +50,7 @@
       <p> Simply inflate the balloon, tie it off, open the arch and buttons of the mouse, and insert the balloon under the arch, ensuring the knot fits into the designated hole.</p>
     </div>
       <div class="image-section">
-        <img src="./squiB/Artboard 1.png" alt="Image 2">
+        <img src="./squiB/Artboard 1.png" class="clickable-image">
     </div>
   </div>
 
