--- a/cake mold.html
+++ b/cake mold.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Programmable Cake Mold</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="./favicon_1X1.png">
 
   
   
@@ -49,11 +49,7 @@
 
       <div class="text-section">
         <h1>How does it work?</h1>
-        <p>There are 5 links controlling the curve, each connected to a potentiometer (4 in total). These links are attached to a linear potentiometer.</p>
-        <p>By adjusting the links, the curve alters its shape, and by sliding the control, the curve changes its distance from the center.</p>
-        <p>In the heart of the device lies a rotary encoder. Rotating it causes the curve to shift around the center.</p>
-        <p>With this tool, users can manipulate both the curve and its position. By pressing a button, users can "freeze" the curve in space, 
-          creating a loft surface between the curve and the subsequent one. After a few clicks, a complex 3D shape emerges.</p>
+        <p>The mold contains voxels that can be manipulated using a robotic arm. The chef decides what flavors the user should experience and how they should be blended, and the robotic arm pushes the voxels to the desired position.</p>
       </div>
 
       <div class="image-section">
@@ -67,9 +63,7 @@
 
     <div class="text-section">
       <h1>Final Output</h1>
-      <p>During this phase, I experimented with using the tool to "sketch" chairs. Through this process, 
-        I grasped that the tool generates a distinct aesthetic language. Concurrently, I pondered the potential creative endeavors 
-        of other users with the tool.</p>
+      <p>The final result shown here exhibits a layered, voxel-like structure with a grid pattern.</p>
     </div>
 
     <div class="image-section">
