--- a/Data Tree.html
+++ b/Data Tree.html
@@ -24,7 +24,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">🚧Projects🚧</a></li>
+        <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
   </header>
@@ -35,17 +35,16 @@
       <div class="text-section">
           <h2>Data Tree</h2>
           <h3>2020</h3>
-          <p class="spaced-paragraph">A living interactive digital garden - Bezalel academy of art and design, the Incobator program.
+          <p class="spaced-paragraph">A living interactive digital garden - Bezalel academy of art and design, the Incobator program.</p>
 
-            Many individuals view the virtual world as a realm that is intangible and metaphysical, serving as a means of escape. However, the truth differs. The maintenance of this world has substantial environmental repercussions and requires a significant amount of resources, which can take a toll on the planet. For instance, the production cycle of a 1-megabyte email uses the same amount of energy as a 60W incandescent bulb that is used for 20 minutes.
-            
-            The "DATA Tree" is a living garden that merges the physical and virtual world to reflect the transparent consumption of digital energy.
+            <p>Many individuals view the virtual world as a realm that is intangible and metaphysical, serving as a means of escape. However, the truth differs. The maintenance of this world has substantial environmental repercussions and requires a significant amount of resources, which can take a toll on the planet. For instance, the production cycle of a 1-megabyte email uses the same amount of energy as a 60W incandescent bulb that is used for 20 minutes.</p>
+            <p>The "DATA Tree" is a living garden that merges the physical and virtual world to reflect the transparent consumption of digital energy.</p>
         </p>
       </div>
 
       <div class="image-section">
-        <img src="./programmle mold cake/cake_mold_1.jpg">
-        <iframe class="responsive-video" width="560" height="315" src="https://drive.google.com/file/d/1tRuEckWaORKhuMzkbNJsSdeKQvExxtnS/view?usp=sharing" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+        <img src="./Data Tree/DSC_1379-2.jpg">
+        <iframe class="responsive-video" width="560" height="315" src="https://drive.google.com/file/d/1tRuEckWaORKhuMzkbNJsSdeKQvExxtnS/preview" title="Google Drive video player" frameborder="0" allow="autoplay"></iframe>
     </div>
   </div>
   
@@ -53,12 +52,12 @@
 
       <div class="text-section">
         <h1>How does it work?</h1>
-        <p>The mold contains voxels that can be manipulated using a robotic arm. The chef decides what flavors the user should experience and how they should be blended, and the robotic arm pushes the voxels to the desired position.</p>
+        <p>Visitors of the exhibition are free to pick up the digital water sprayer and spray the pixelated plant. The energy from the physical clicks helps to load the plant until it is no longer pixelated.</p>
       </div>
 
       <div class="image-section">
-        <img src="./programmle mold cake/cake_mold_2.jpg">
-        <img src="./programmle mold cake/cake_mold_robot_2.jpg" >
+        <img src="./Data Tree/DSC_1379-2.jpg">
+        <img src="./Data Tree/14.png" >
     </div>
   </div>
 
@@ -66,7 +65,7 @@
   <div class="container">
 
     <div class="text-section">
-      <h1>Final Output</h1>
+      <h1>Sapce and prototypes</h1>
       <p>The final result shown here exhibits a layered, voxel-like structure with a grid pattern.</p>
     </div>
 
