--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">🚧Projects🚧</a></li>
+        <li><a href="#">Projects</a></li>
       </ul>
     </nav>
   </header>
@@ -23,7 +23,7 @@
   <main>
     <table>
       <tr>
-        <td><a href="index.html" data-imageUrl="./dither_pipette.png" class="hoverable">Pipette</a></td>
+        <td><a href="index.html" data-imageUrl="./dither_pipette.png" class="hoverable">🚧Pipette🚧</a></td>
       </tr>
       <tr>
         <td><a href="https://www.carboncell.co" data-imageUrl="./dither_carbon cell.jpg" target="_blank" rel="noopener noreferrer"  class="hoverable">Carbon Cell</a></td>
@@ -47,13 +47,13 @@
         <td><a href="cake mold.html" data-imageUrl="./dither_Programmable Cake Mold.png" class="hoverable">Programmable Cake Mold</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_Data Tree.gif" class="hoverable">Data Tree</a></td>
+        <td><a href="#" data-imageUrl="./dither_Data Tree.gif" class="hoverable">🚧Data Tree🚧</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_stul.png" class="hoverable">STuL</a></td>
+        <td><a href="#" data-imageUrl="./dither_stul.png" class="hoverable">🚧STuL🚧</a></td>
       </tr>
       <tr>
-        <td><a href="#" data-imageUrl="./dither_lungs.gif" class="hoverable">Organs Visualization</a></td>
+        <td><a href="#" data-imageUrl="./dither_lungs.gif" class="hoverable">🚧Organs Visualization🚧</a></td>
       </tr>
     </table>
     <button id="scrollToTopBtn" class="scroll-to-top"></button>
