--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="projects.html">🚧Projects🚧</a></li>
+            <li><a href="projects.html">Projects</a></li>
            <!--<li><a href="projects.html">Projects</a></li> -->
         </ul>
     </nav>
