--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">🚧Projects🚧</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <!--<li><a href="projects.html">Projects</a></li> -->
       </ul>
     </nav>
