Updated image file

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
   <main>
     <table>
       <tr>
-        <td><a href="index.html" data-imageUrl="./dither_pipette.png" class="hoverable">🚧Pipette🚧</a></td>
+        <td><a href="index.html" data-imageUrl="./dither_pipette_pixel1.png" class="hoverable">🚧Pipette🚧</a></td>
       </tr>
       <tr>
         <td><a href="https://www.carboncell.co" data-imageUrl="./dither_carbon cell.jpg" target="_blank" rel="noopener noreferrer"  class="hoverable">Carbon Cell</a></td>
