--- a/about.html
+++ b/about.html
@@ -20,11 +20,12 @@
     </nav>
 </header>
 <div id="model-container">
-    <!-- Canvas for the 3D model -->
+    <button class="round-button" id="wireframe-toggle"></button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="3dmodel.js"></script>
 </div>
+
 <div id="text-container">
     <!-- Text content goes here -->
     <p>Hi! I'm Ori Blich - a design engineer / creative technologist who specializes in human-machine interactions. 
