--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,9 @@
         <td><a href="simulathe.html" data-imageUrl="./dither_Simulathe.gif" class="hoverable">Simulathe</a></td>
       </tr>
       <tr>
+        <td><a href="CarveRL.html" data-imageUrl="./dither_carveRL_cover_projects.png" class="hoverable">carveRL</a></td>
+      </tr>
+      <tr>
         <td><a href="CADmanship.html" data-imageUrl="./dither_Cadmanship.png" class="hoverable">CADmanship</a></td>
       </tr>
       <tr>
