--- a/CarveRL.html
+++ b/CarveRL.html
@@ -50,10 +50,9 @@
   </div>
   
   <div class="container">
-
       <div class="text-section">
         <h1>Ver 1</h1>
-        As an initial stage of the project, I started by training a linear actuator to follow a specific pattern. In this video, you can observe a successfully trained agent avoiding the cylinder and the white balls while also making contact with the black ones. Simultaneously, the physical twin, connected to the digital twin, replicated the movements in the physical space.
+        <p>As an initial stage of the project, I started by training a linear actuator to follow a specific pattern. In this video, you can observe a successfully trained agent avoiding the cylinder and the white balls while also making contact with the black ones. Simultaneously, the physical twin, connected to the digital twin, replicated the movements in the physical space.</p>
       </div>
 
       <div class="image-section">
