--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
 
 <div id="text-container">
     <!-- Text content goes here -->
-    <p>Hi! I'm Ori Blich - a design engineer / creative technologist who specializes in human-machine interactions. 
+    <h1>Hi! I'm Ori Blich - a design engineer / creative technologist who specializes in human-machine interactions. 
         Currently, I'm working on utilizing sustainable materials and creating VR educational tools.
-    </p>
+    </h1>
 </div>
 <div class="cursor small"></div>
 <script src="main.js"></script>
